# giga-chess

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml  tests.yml
benches/: benchmark.rs
example/: Cargo.toml
example/src/: main.rs  simulations.rs
example/src/simulations/: stupid_game.rs
examples/: fools_mate.rs  lichess_puzzle_archive.rs  lichess_puzzle_stats.rs  stockfish.rs
src/: big_array.rs  bitboard.rs  color.rs  core.rs  engine.rs  error.rs  game.rs  lib.rs  lichess.rs  moves.rs  notation.rs  piece.rs  prelude.rs  session.rs  stockfish.rs  storage.rs  types.rs
src/chess_boards/: chess_board12.rs  chess_board8.rs
src/core/: bitboard.rs  board.rs  castling.rs  piece.rs  position.rs  puzzle.rs  square.rs  zobrist.rs
src/engine/: attack_table.rs  bit_board.rs  magic_numbers.rs  square.rs
src/game/: algebraic_notation.rs  bit_board.rs  castling_rights.rs  chess_board.rs  chess_move.rs  color.rs  mode.rs  outcome.rs  pgn_metadata.rs  piece.rs  square.rs  state.rs  status.rs
src/lichess/: archive.rs  entry.rs  parser.rs  puzzle.rs  themes.rs
src/moves/: chess_move.rs  generator.rs  list.rs  naive.rs
src/moves/generator/: magic.rs  table.rs
src/notation/: pgn.rs  san.rs
src/session/: action.rs  clock.rs  config.rs  event.rs
src/stockfish/: command.rs  error.rs  event.rs  reader.rs
src/storage/: board.rs  io.rs  naive_moves.rs  position.rs  puzzle.rs
src/types/: bitboard.rs  chess_board.rs  piece.rs
src/utils/: bit_operations.rs
