[package]
name = "giga-chess"
description = "A rust chess library built for performance, handling game logic and legal/best move generation."
version = "0.10.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Zitronenjoghurt/giga-chess"

[dependencies]
rand = { version = "0.10.1", optional = true }
rayon = { version = "1.12.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }