[package]
name = "giga-chess"
description = "A rust chess library built for performance, handling game logic and legal/best move generation."
version = "0.10.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Zitronenjoghurt/giga-chess"

[features]
lichess-puzzle-parser = ["csv", "serde", "zstd"]
stockfish-manager = []

[dependencies]
bitcode = { version = "0.6.9", optional = true }
csv = { version = "1.4.0", optional = true }
rand = { version = "0.10.1", optional = true }
rayon = { version = "1.12.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.28.0", features = ["derive"], optional = true }
thiserror = "2.0.18"
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
indicatif = "0.18.4"
ureq = "3.3.0"

[[example]]
name = "lichess_puzzle_archive"
required-features = ["lichess-puzzle-parser"]

[[example]]
name = "lichess_puzzle_stats"
required-features = ["lichess-puzzle-parser"]

[[example]]
name = "stockfish"
required-features = ["stockfish-manager"]